--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,51 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>My App</title>
+    <title>Lingvo</title>
     <link rel="stylesheet" type="text/css" href="css/myapp.css">
   </head>
   <body>
-    <div id="header">
-        <h1>My Contacts</h1>
-        <a href="#">Contact List</a> | <a href="#add">New Contact</a>
+    <div class="content">
+    <div class="header">
+        <ul class="menu">
+            <li class="menu__item">
+                <a href="#">Главная</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/politics">Политика</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/social">Общество</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/economics">Экономика</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/world">В мире</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/sport">Спорт</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/culture">Культура</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/science">Наука</a>
+            </li>
+            |
+            <li class="menu__item">
+                <a href="#category/tech">High-tech</a>
+            </li>
+        </ul>
     </div>
-    <br/>
-    <div id="content">
+
       {{{body}}}
     </div>
 
