--- a/client/styles/less/main.less
+++ b/client/styles/less/main.less
@@ -1,21 +1,45 @@
-body { padding: 10px; font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+a {
+    color: #2af;
+    text-decoration: none;
+}
 
-a { color: #00B7FF; }
-h1 { font-size: 2em; font-weight: bold; margin-bottom: 1em;}
-strong { font-weight: bold; }
-label { display: block; float: left; width: 120px; clear: left; }
-.clear { clear: both; }
+a:hover {
+  text-decoration: underline;
+  color: #19e;
+}
 
-#content { height: 300px; }
+.menu {
+    text-align: center;
+    width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
-.contact_small, .contact_full { cursor: pointer; width: 260px; float: left; border: solid 1px #c0c0c0; padding: 5px; margin-right: 10px; margin-bottom: 10px; }
-.contact_small:hover { border: solid 1px blue;}
-.contact_small img { float: left; width: 45px; height: 45px; margin-right: 5px; }
+.menu__item {
+    display: inline;
+    margin: 20px;
+}
 
-.contact_full { float: none; height: 325px;}
-.contact_full img { margin-left: 5px; }
+.content {
+    width: 800px;
+    margin: 0 auto;
+}
 
-.add_contact label { display: inline-block; width: 120px; float: left; clear: left; }
+.episodes {
+    border-top: 2px solid black;
+    width: 800px;
+    margin: 0 auto;
+}
 
-#output {margin-top: 2em; font-size: .9em; border: solid 1px #c0c0c0; background-color: #f0f0f0; padding: 5px;}
-#output li {margin-left: 30px; list-style-type: decimal;}
+.episode {
+    border-bottom: 2px solid #ccc;
+    padding: 20px;
+}
+
+.episode img {
+  max-width: 700px;
+}
+
+.episode__title {
+  font-size: 2em;
+}
