--- a/public/css/myapp.css
+++ b/public/css/myapp.css
@@ -127,6 +127,9 @@ table {
   border-spacing: 0;
 }
 
+body {
+  font-family: sans-serif;
+}
 a {
   color: #2af;
   text-decoration: none;
@@ -163,4 +166,33 @@ a:hover {
 }
 .episode__title {
   font-size: 2em;
+}
+.popup {
+  position: fixed;
+  top: 150px;
+  left: 50%;
+  margin-left: -250px;
+  width: 500px;
+  background: #fff;
+  box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+.difficulty {
+  width: 460px;
+  margin: 0 auto;
+}
+.difficulty__header {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+.difficulty__list {
+  width: 150px;
+  margin: 0 auto;
+}
+.difficulty__submit {
+  float: right;
+  font-size: 1em;
 }
