--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <div class="header">
         <ul class="menu">
             <li class="menu__item">
-                <a href="#">Главная</a>
+                <a href="#difficulty">Изменить уровень языка</a>
             </li>
             |
             <li class="menu__item">
