--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Lingvo</title>
-    <link rel="stylesheet" type="text/css" href="css/myapp.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <div class="content">
