--- a/client/styles/sass/main.sass
+++ b/client/styles/sass/main.sass
@@ -1,87 +1,407 @@
+// Imports
 @import "compass/reset"
 @import "compass/css3/user-interface"
 @import "compass"
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic)
 
-body
-  font-family: sans-serif
 
-a
+// Variables 
+$default-border-radius: 5px
+$main-font-color: black
+$icons: sprite-map("icons/*.png")
+$bs: border-box
 
-  color: #2af
-  text-decoration: none
 
-a:hover
+// Mixins
+=arrow-shape($point)
+    $opposite: opposite-position($point)
+    border: 25px solid transparent
+    border-#{$opposite}: 25px solid #fff
+    border-#{$point}: 0
+    height: 0
+    width: 0
 
-  text-decoration: underline
-  color: #19e
 
-.menu
+// Main
+body 
+    -webkit-font-smoothing: antialiased
+    font-family: 'PT Sans', sans-serif
+    font-size: 62.5%
+    line-height: 1.8em
+    &.wood
+        background: image-url('bg.jpg') repeat #e7d1ae
+    &.gray
+        background: image-url('bg3.png') repeat #e7d1ae
+    &.blue
+        background: image-url('bg2.png') repeat #e7d1ae
+.site-main-header
+    font-size: 1.8em
+    +background(linear-gradient(top, #464c56 ,#464c57 35%, #393f48))
+    width: 100%
+    height: 40px
+    +single-box-shadow(rgba(0,0,0,.55), 0, 1px, 1px, 0)
+    position: fixed
+    z-index: 10
 
-  text-align: center
-  width: 600px
-  margin: 0 auto
-  padding: 20px
+.inner 
+    width: 100%
+    max-width: 960px
+    margin: 0 auto
+    position: relative
 
-.menu__item
+a 
+    +link-colors(#2970c4, #21599f, #1b4982, #2970c4, #21599f)
+    text-decoration: none
+strong, b
+    font-weight: bold
+.logo 
+    background: image-url('logo.png')
+    display: block
+    float: left
+    height: image-height('logo.png') 
+    width: image-width('logo.png')
+.logo-title
+    font-weight: bold
+    color: #ffea68
+    position: absolute
+    top: 12px
+    left: 210px
+    z-index: 5
+    &:before
+        content: "— "
+.add-recomendation 
+    font-size: .8em
+    color: rgba(255,255,255,.7) !important
+    margin: 10px 0 0
+    float: right
+    .icn-plus 
+        margin: 0 0 -4px 7px
+    &:hover 
+        color: rgba(255,255,255,1) !important
+        .icn-plus
+            +sprite-dimensions($icons, plus-hover)
+            background-position: sprite-position($icons, plus-hover)
 
-  display: inline
-  margin: 20px
 
-.content
+// Grid
+.grid
+    float: left
+.col-1-2
+    +box-sizing($bs)
+    width: 50%
 
-  width: 800px
-  margin: 0 auto
 
-.episodes
+// Themes navigation
+.themes-list-holder 
+    font-size: 1.6em
+    background: rgba(255,255,255,.65)
+    width: 260px
+    +border-left-radius
+    position: fixed
+    top: 65px
+.theme-item 
+    display: block
+    height: 50px
+    border-bottom: solid 1px rgba(0,0,0,.05)
+    +single-transition(all, 170ms, ease-in-out, 1ms)
+    cursor: pointer
+    @extend %group
+    &:first-child
+        +border-top-left-radius
+    &:last-child
+        border: none
+        +border-bottom-left-radius
+    &:hover 
+        background: rgba(255,255,255,.5)
+    &.selected 
+        background: #fff
+        padding-left: 15px
+        cursor: default
+.theme-icon-holder 
+    float: left
+    width: 50px
+.theme-icn 
+    margin: 6px 10px 4px
+    +border-radius
+    +single-box-shadow(rgba(0,0,0,.8), 0, 2px, 2px, -1px)
+.theme-name 
+    color: $main-font-color
+    float: left
+    margin: 17px 10px 0 
+.active-arrow 
+    +arrow-shape(right)
+    position: absolute
+    right: 0
+    +opacity(0)
+    +single-transition(all, 200ms, ease-in-out, 1ms)
+    .theme-item.selected &
+        right: -25px
+        +opacity(1)
+        +single-transition(all, 100ms, ease-in-out, 100ms)
 
-  border-top: 2px solid black
-  width: 800px
-  margin: 0 auto
 
-.episode
+// Banner
+.main-banner
+    background: #fff8b9
+    +background-image(linear-gradient(top, #fff9b5, #fff8b9 50%, #fff9cf))
+    display: block
+    height: 60px
+    width: 630px
+    margin-left: 295px
+    +border-bottom-radius(3px)
+    +box-shadow(rgba(black,.3) 0 1px 2px 0)
+    position: fixed
+    top: 40px
+    z-index: 5
+.banner-text
+    font-size: 1.4em
+    line-height: 1.2em
+    vertical-align: middle
+    display: table-cell
+    width: 350px
+    height: 60px
+    padding: 0 15px
+    .banner-big-font &
+        font-size: 1.5em
+        width: 400px
+.banner-btn-holder
+    position: absolute
+    top: 15px
+    right: 10px
+    z-index: 5
+    .small-btn
+        margin-right: 5px
+        .banner-big-font &
+            font-size: 1.6em
+            padding: 6px 25px
 
-  border-bottom: 2px solid #ccc
-  padding: 20px
 
-.episode img
+// Buttons
+.small-btn
+    font-size: 1.4em
+    font-weight: bold
+    display: inline-block
+    padding: 4px 10px
+    +border-radius(3px)
+    +box-shadow(rgba(black,.4) 0 0 0 1px, rgba(white,.3) 0 2px 0px 0px)
+.red-btn
+    color: #fff !important
+    text-shadow: 0 1px 0 rgba(black,.3)
+    +background-image(linear-gradient(top, #e97d90, #ea2c58))
+    &:hover
+        +background-image(linear-gradient(top, #e97d90, #de2a54))
+    &:active
+        +box-shadow(rgba(black,.4) 0 0 0 1px, rgba(black,.5) 0 1px 3px 0px inset)
+.gray-btn
+    color: black !important
+    text-shadow: 0 1px 0 rgba(white,.9)
+    +background-image(linear-gradient(top, #fbf9fa, #f1f0ee))
+    &:hover
+        +background-image(linear-gradient(top, #fbf9fa, #e5e5e3))
+    &:active
+        +box-shadow(rgba(black,.4) 0 0 0 1px, rgba(black,.5) 0 1px 3px 0px inset)
+.disabled-btn
+    +opacity(.3)
+    cursor: default
+    pointer-events: none
+.comment-btn
+    font-size: 1.6em
+    text-shadow: 0 1px 0 rgba(white,.9)
+    text-align: center
+    background: #d9d8d5
+    +background-image(linear-gradient(top, #f8f5f5, #d9d8d5))
+    margin-bottom: -15px
+    padding: 12px 0
+    border-top: solid 1px #e8e8e8
+    +border-bottom-radius
+    +box-shadow(rgba(white,.85) 0 1px 0 0 inset)
+    cursor: pointer
+    +user-select(none)
+    &:hover
+        background: #c3c2bf
+        +background-image(linear-gradient(top, #eeecec, #c3c2bf))
+    &:active
+        +box-shadow(rgba(black,.65) 0 2px 5px -3px inset) 
+        +translateY(1px)
+    .icn-comments
+        margin: 0 10px -5px 0
+        +opacity(.6)
+    
 
-  max-width: 700px
+// Popup
+.popup-bg
+    background: rgba(white,.55)
+    display: none
+    width: 100%
+    height: 100%
+    position: fixed
+    z-index: 10
+.popup-container
+    display: none
+    width: 100%
+    height: 100%
+    overflow: auto
+    position: fixed
+    top: 0px
+    left: 0px
+    z-index: 15
+.popup-holder 
+    width: 450px
+    margin: 70px 0 0 -225px
+    padding-bottom: 50px
+    position: absolute
+    left: 50%
+    z-index: 20
+.popup-body
+    background: white
+    padding-bottom: 30px
+    +border-radius
+    +box-shadow(rgba(black,.45) 0 2px 5px 0)
+    h1
+        font-size: 2.5em
+        line-height: 1.2em
+        font-weight: bold
+        padding: 30px 50px 0
+    p
+        font-size: 1.5em
+        padding: 10px 50px 5px
+.close-popup-btn
+    font-size: 2.8em
+    color: black !important
+    display: block
+    position: absolute
+    top: 15px
+    right: 15px
+    +opacity(.5)
+    &:hover
+        +opacity(1)
 
-.episode__title
 
-  font-size: 2em
+// Form
+.field
+    margin: 10px 0 0
+    .popup-body &
+        margin: 15px 50px 0
+        &.btn-field
+            margin-top: 25px
+            .small-btn
+                margin-right: 20px
+    label
+        font-size: 1.4em
+    .addition-label
+        float: right
+.caption
+    font-size: 1.2em
+    color: red
+    display: none
+    margin: 3px 0 0
+    .error-field &
+        display: block
+.radio-label
+.text-input
+    font-family: 'PT Sans', sans-serif
+    font-size: 1.8em
+    +box-sizing($bs)
+    width: 100%
+    margin: 5px 0 0
+    padding: 3px 10px
+    border: none
+    outline: none
+    +border-radius
+    +box-shadow(rgba(black,.6) 0 0 2px 0)
+    &:focus
+        +box-shadow(rgba(black,.3) 0 0 2px 0, rgba(70,169,226,.9) 0 0 5px 0)
+    .error-field &
+        background: rgba(red,.05)
+.radio-btn
+    margin: 0 7px 0 10px
+    position: relative
+    top: -1px
 
-.popup
 
-  position: fixed
-  top: 150px
-  left: 50%
-  margin-left: -250px
-  width: 500px
-  background: #fff
-  box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75)
-  border: 1px solid #ccc
-  padding: 20px
+// Recommendations
+.recs-holder
+    background: rgba(0,0,0,.1)
+    float: right
+    width: 72.91666667%
+    margin: 40px 0 -3px
+    +single-box-shadow(rgba(0,0,0,.3), 0, 0, 2px, 1px, inset)
+    &.not-signed-in
+        padding-top: 50px
 
-.difficulty
+.rec 
+    background: #fff
+    width: 85.71428571%
+    margin: 25px auto 50px
+    padding-bottom: 15px
+    +border-radius
+    +single-box-shadow(rgba(0,0,0,.35), 0, 1px, 2px, 0px)
+    position: relative
+    &:after 
+        content: ''
+        background: rgba(255,255,255,.2)
+        width: 80%
+        height: 1px
+        margin: 0 auto
+        +single-box-shadow(rgba(0,0,0,.07), 0, 1px, 0, 0)
+        position: absolute
+        bottom: -25px
+        left: 10%
+    h1 
+        font-size: 2.2em
+        line-height: 1.2em
+        font-weight: bold
+        padding: .5em 5% .3em
+    p 
+        font-size: 1.5em
+        padding: .5em 5%
+        a
+            border-bottom: solid 1px adjust-lightness(#2970c4, 45%)
 
-  width: 460px
-  margin: 0 auto
+.rec-illustration
+    width: 100%
+    margin: 0 auto
+    +border-top-radius
+.tag 
+    font-size: 0.9em
+    color: white !important
+    display: inline-block
+    margin: 0 5px 5px 0
+    padding: 3px 7px 2px
+    +border-radius(5px)
+    +opacity(.9)
+    &:hover
+        +opacity(100)
+.youtube-tag
+    background: #d21015
+.home-tag
+    background: #346cd2
+.apple-tag
+    background: #7e7c78
+.android-tag
+    background: #51a72c
+.map-tag
+    background: #e4ac30
+.fb-tag
+    background: #395993
+.vk-tag
+    background: #6185aa
 
-.difficulty__header
 
-  text-align: center
-  font-weight: bold
-  font-size: 1.2em
-  margin-bottom: 20px
+// Icons
+i
+    background: $icons
+    display: inline-block
 
-.difficulty__list
+@each $icon in sprite_names($icons)
+    .icn-#{$icon}
+        +sprite-dimensions($icons, $icon)
+        background-position: sprite-position($icons, $icon)
 
-  width: 150px
-  margin: 0 auto
 
-.difficulty__submit
-
-  float: right
-  font-size: 1em
-
+// Fix
+%group, .group
+    &:after
+        content: ''
+        display: table
+        clear: both
