--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,8 +1,8 @@
-<div class="episode">
-    <h3 class="episode__title">
+<article class="rec">
+    <h1 class="episode__title">
         <a href="{{ link }}" target="_blank">{{ title }}</a>
-    </h3>
+    </h1>
     <p class="episode__content">
         {{{ description }}}
     </p>
-</div>
+</article>
