--- a/client/templates/layout.hbs
+++ b/client/templates/layout.hbs
@@ -1,1 +1,4 @@
-<div class="js-boilerplate-app"></div>
+<div class="inner">
+    <aside class="themes-list-holder"></aside>
+    <section class="recs-holder"></section>
+</div>
