--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,50 +4,16 @@
     <title>Lingvo</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
-  <body>
-    <div class="content">
-    <div class="header">
-        <ul class="menu">
-            <li class="menu__item">
-                <a href="#difficulty">Изменить уровень языка</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/politics">Политика</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/social">Общество</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/economics">Экономика</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/world">В мире</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/sport">Спорт</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/culture">Культура</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/science">Наука</a>
-            </li>
-            |
-            <li class="menu__item">
-                <a href="#category/tech">High-tech</a>
-            </li>
-        </ul>
-    </div>
-
-      {{{body}}}
-    </div>
+  <body class="wood">
+    <header class="site-main-header">
+        <div class="inner">
+            <a class="logo" href="/"></a>
+            <b>
+                <a class="nav-item" href="#difficulty">Сменить уровень сложности</a>
+            </b>
+        </div>
+    </header>
+    <section class="content">{{{body}}}</section>
 
     <script type="text/javascript" src="js/myapp.js"></script>
   </body>
