--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,55 @@
-<div class="js-boilerplate-app"></div>
+<div class="inner">
+    <aside class="themes-list-holder">
+        <ul class="theme-list">
+            <a href="#category/politics">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Политика</span>
+                </li>
+            </a>
+            <a href="#category/social">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Общество</span>
+                </li>
+            </a>
+            <a href="#category/economics">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Экономика</span>
+                </li>
+            </a>
+            <a href="#category/world">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">В мире</span>
+                </li>
+            </a>
+            <a href="#category/sports">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Спорт</span>
+                </li>
+            </a>
+            <a href="#category/culture">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Культура</span>
+                </li>
+            </a>
+            <a href="#category/science">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">Наука</span>
+                </li>
+            </a>
+            <a href="#category/tech">
+                <li class="theme-item">
+                    <div class="active-arrow"></div>
+                    <span class="theme-name">High-tech</span>
+                </li>
+            </a>
+        </ul>
+    </aside>
+    <section class="recs-holder"></section>
+</div>
