Finished transfering to new layout

--- a/client/styles/sass/main.sass
+++ b/client/styles/sass/main.sass
@@ -460,6 +460,11 @@ x:-o-prefocus, .popup-container // opera fix
         line-height: 1.2em
         font-weight: bold
         padding: 30px 50px 0
+    h2
+        font-size: 2em
+        line-height: 1.2em
+        font-weight: bold
+        padding: 30px 50px 0
     p
         font-size: 1.5em
         padding: 10px 50px 5px
@@ -742,3 +747,12 @@ i
 
  
 
+.difficulty
+    padding: 20px
+
+.difficulty__list
+    font-size: 1.4em
+
+.difficulty__submit
+    font-size: 1.6em
+    float: right
