--- a/client/templates/layout.hbs
+++ b/client/templates/layout.hbs
@@ -2,3 +2,9 @@
     <aside class="themes-list-holder"></aside>
     <section class="recs-holder"></section>
 </div>
+<div class="popup-container">
+<div class="popup-holder">
+<div class="popup-body">
+</div>
+</div>
+</div>
