--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -44,7 +44,7 @@
     <a href="#category/tech">
         <li class="theme-item">
             <div class="active-arrow"></div>
-            <span class="theme-name">High-tecg</span>
+            <span class="theme-name">High-tech</span>
         </li>
     </a>
 </ul>
