Fixed wrong category name

--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -23,7 +23,7 @@
             <span class="theme-name">В мире</span>
         </li>
     </a>
-    <a href="#category/sports">
+    <a href="#category/sport">
         <li class="theme-item">
             <div class="active-arrow"></div>
             <span class="theme-name">Спорт</span>
