Added some images

--- a/client/styles/sass/main.sass
+++ b/client/styles/sass/main.sass
@@ -756,3 +756,11 @@ i
 .difficulty__submit
     font-size: 1.6em
     float: right
+
+
+.episode__image-holder
+    width: 600px
+    text-align: center
+
+.episode__image
+    width: 400px
