--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -2,6 +2,7 @@
     <h1 class="episode__title">
         <a href="{{ link }}" target="_blank">{{ title }}</a>
     </h1>
+    <div class="episode__image-holder"><img class="episode__image" src="{{ image }}"></div>
     <p class="episode__content">
         {{{ description }}}
     </p>
