Added sources; deleted news with short summary

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,9 +1,16 @@
 <article class="rec">
+    <ul class="tags">
+        <li><a href="#">{{ name }}</a></li>
+    </ul>
     <h1 class="episode__title">
         <a href="{{ link }}" target="_blank">{{ title }}</a>
     </h1>
-    <div class="episode__image-holder"><img class="episode__image" src="{{ image }}"></div>
-    <p class="episode__content">
+    {{#if image}}
+        <div class="episode__image-holder">
+            <img class="episode__image" src="{{ image }}">
+        </div>
+    {{/if}}
+    <div class="episode__content">
         {{{ description }}}
-    </p>
+    </div>
 </article>
