--- a/client/styles/sass/main.sass
+++ b/client/styles/sass/main.sass
@@ -568,11 +568,13 @@ x:-o-prefocus, .popup-container // opera fix
             position: absolute
             top: 1em
             right: 5%
-    > p 
+    > .episode__content
         font-size: 1.5em
         padding: .5em 5%
         > a
             border-bottom: solid 1px adjust-lightness(#2970c4, 45%)
+    img
+        max-width: 500px
 
 .rec-illustration
     width: 100%
@@ -762,5 +764,58 @@ i
     width: 600px
     text-align: center
 
-.episode__image
-    width: 400px
+
+.tags
+    bottom: -12px
+    list-style: none outside none
+    margin: 0
+    padding: 0
+    position: absolute
+    right: 24px
+
+.tags li, .tags a
+    float: left
+    font-size: 11px
+    height: 24px
+    line-height: 24px
+    position: relative
+
+.tags a
+    background: none repeat scroll 0 0 #0089e0
+    border-bottom-right-radius: 4px
+    border-top-right-radius: 4px
+    color: #fff
+    margin-left: 20px
+    padding: 0 10px 0 12px
+    text-decoration: none
+
+.tags a:before
+    border-color: transparent #0089e0 transparent transparent
+    border-style: solid
+    border-width: 12px 12px 12px 0
+    content: ""
+    float: left
+    height: 0
+    left: -12px
+    position: absolute
+    top: 0
+    width: 0
+
+.tags a:after
+    background: none repeat scroll 0 0 #fff
+    border-radius: 2px
+    box-shadow: -1px -1px 2px #004977
+    content: ""
+    float: left
+    height: 4px
+    left: 0
+    position: absolute
+    top: 10px
+    width: 4px
+
+.tags a:hover
+    background: none repeat scroll 0 0 #555
+
+.tags a:hover:before
+    border-color: transparent #555 transparent transparent
+
