Switched to new layout

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,16 +1,8 @@
-<article class="rec">
-    <ul class="tags">
-        <li><a href="#">{{ name }}</a></li>
-    </ul>
-    <h1 class="episode__title">
-        <a href="{{ link }}" target="_blank">{{ title }}</a>
-    </h1>
-    {{#if image}}
-        <div class="episode__image-holder">
-            <img class="episode__image" src="{{ image }}">
-        </div>
-    {{/if}}
-    <div class="episode__content">
-        {{{ description }}}
-    </div>
+<article class="article">
+    <h1><a href="{{ link }}" target="_blank">{{ title }}</a></h1>
+
+
+    <a href="#" class="post-time">{{ name }} – 5 minutes ago</a>
+
+    <p>{{{ description }}}</p>
 </article>
