--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -1,50 +1,11 @@
-<ul class="theme-list">
-    <a href="#category/politics">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Политика</span>
-        </li>
-    </a>
-    <a href="#category/social">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Общество</span>
-        </li>
-    </a>
-    <a href="#category/economics">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Экономика</span>
-        </li>
-    </a>
-    <a href="#category/world">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">В мире</span>
-        </li>
-    </a>
-    <a href="#category/sport">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Спорт</span>
-        </li>
-    </a>
-    <a href="#category/culture">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Культура</span>
-        </li>
-    </a>
-    <a href="#category/science">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">Наука</span>
-        </li>
-    </a>
-    <a href="#category/tech">
-        <li class="theme-item">
-            <div class="active-arrow"></div>
-            <span class="theme-name">High-tech</span>
-        </li>
-    </a>
-</ul>
+<nav class="topics j-topics">
+    <a href="#"><span class="topic-link">Top Stories</span></a>
+    <a href="#category/politics"><span class="topic-link">Politics</span></a>
+    <a href="#category/social"><span class="topic-link">Social</span></a>
+    <a href="#category/economics"><span class="topic-link">Economics</span></a>
+    <a href="#category/sport"><span class="topic-link selected">Sports</span></a>
+    <a href="#category/science"><span class="topic-link">Science</span></a>
+    <a href="#category/tech"><span class="topic-link">Tech</span></a>
+    <a href="#category/culture"><span class="topic-link">Culture</span></a>
+    <a href="#category/world"><span class="topic-link">World</span></a>
+</nav>
