--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,20 @@
-<div class="inner">
-    <aside class="themes-list-holder">
-    </aside>
-    <section class="recs-holder"></section>
-</div>
-<div class="popup-container">
-    <div class="popup-holder">
-        <div class="popup-body">
-        </div>
-    </div>
-</div>
+<aside class="sidebar menu">
+</aside>
+<section class="news-feed">
+
+    <header class="main-header">
+        <h1>Plain news</h1>
+
+        <h2>it's easy to understand. <span class="highlight-color">Why?</span></h2>
+    </header>
+
+    <section class="language-lvl-selector j-languageLVL">
+    </section>
+
+    <section class="articles"><!-- Toggle class «loading» for loading spinner -->
+
+        <div class="loading-spinner"></div>
+    </section>
+
+</section>
+<aside class="sidebar"></aside>
