--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,17 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
-  <head>
-    <title>Lingvo</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body class="wood">
-    <header class="site-main-header">
-        <div class="inner">
-            <a class="logo" href="/"></a>
-            <b>
-                <a class="nav-item" href="#difficulty">Сменить уровень сложности</a>
-            </b>
-        </div>
-    </header>
-    <section class="content">{{{body}}}</section>
-
+<head>
+    <meta charset="UTF-8">
+    <title>Plain News</title>
+    <link href="/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <!--[if IE]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+<body>
+    <div class="content-holder group">
+            {{{body}}}
+    </div>
     <script type="text/javascript" src="js/myapp.js"></script>
-  </body>
+</body>
 </html>
