--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Plain News</title>
-    <link href="/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/css/myapp.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
