--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -1,6 +1,8 @@
 @import "compass/reset"
 @import "compass/css3/user-interface"
 @import "compass"
+// @import "animation"
+
 
 // Variables
 $main-bg-color         : #ecf0f1
@@ -19,7 +21,7 @@ $link-hover-color      : adjust-lightness($link-color, -10%)
 
 
 // Reset
-*, *:before, *:after
+*, *:before, *:after 
     +box-sizing(border-box)
 
 
@@ -104,8 +106,7 @@ body
     width: 60%
     min-height: 700px
     padding: 0 5%
-    &.loading
-        background
+    
 
 
 // Header
@@ -121,6 +122,36 @@ body
         font-size: 2.4em
         color: $sub-font-color
         padding-top: .2em
+
+
+// About project
+.about-project
+    background: white
+    width: 24em
+    padding: 1.5em
+    border: solid 3px $link-color
+    +border-radius(5px)
+    +box-shadow($link-hover-color 0 2px 0)
+    position: absolute
+    top: 9em
+    +single-transition(all, 150ms, ease-in-out, 1ms)
+    left: 0
+    +opacity(0)
+    &.showing
+        left: -5em
+        +opacity(1)
+    &:before
+        content: ''
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 15px 15px 15px 0
+        border-color: transparent $link-color transparent transparent
+        position: absolute
+        top: 1.3em
+        left: -15px
+    .message
+        font-size: 1.5em
 
 
 // Navigation
@@ -237,3 +268,5 @@ body
         clear: both
 .hide
     display: none !important
+.pointer
+    cursor: pointer
