--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     <header class="main-header">
         <h1>Plain news</h1>
 
-        <h2>it's easy to understand. <span class="highlight-color">Why?</span></h2>
+        <h2>it's easy to understand. <span class="highlight-color pointer j-show-about">Why?</span></h2>
     </header>
 
     <section class="language-lvl-selector j-languageLVL">
@@ -17,4 +17,6 @@
     </section>
 
 </section>
-<aside class="sidebar"></aside>
+<aside class="sidebar">
+    <div class="about-project hide"><span class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, commodi, officiis, tempora doloremque illo obcaecati fuga id aliquam aspernatur eaque numquam qui eius. Placeat, laborum, ea quidem nostrum at tempore.</span></div>
+</aside>
