[+] Media queries added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>Plain News</title>
-    <link href="/css/myapp.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
