--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -33,6 +33,17 @@ $link-hover-color      : adjust-lightness($link-color, -10%)
         background-image: image_url($x2img)
         background-size: $w $h
 
+@mixin breakpoint($point)
+    @if $point == iphone 
+        @media only screen and (min-width: 320px) and (max-width: 568px) 
+            @content 
+    @else if $point == ipad 
+        @media only screen and (min-width: 768px) and (max-width: 1024px)
+            @content
+    @else if $point == pc 
+        @media only screen and (min-width: 1025px) 
+        @content 
+
 // Fonts
 @font-face
     font-family: 'intro_regular'
@@ -88,24 +99,31 @@ a, .fake-link
 // Main
 body 
     @extend .light-font
-    -webkit-font-smoothing: antialiased
     font-size: 62.5%
+    -webkit-font-smoothing: antialiased
+    -webkit-text-size-adjust: 100%
+    -webkit-font-smoothing: antialiased
     color: $main-font-color
     background: $main-bg-color
 .content-holder
-    width: 960px
+    width: 100%
+    max-width: 960px
     margin: 0 auto
 .sidebar
     float: left    
     width: 20%
     min-height: 1px
     position: relative
+    +breakpoint(iphone)
+        display: none
 .news-feed
     background: white
     float: left
     width: 60%
     min-height: 700px
     padding: 0 5%
+    +breakpoint(iphone)
+        width: 100%
     
 
 
@@ -186,6 +204,8 @@ body
     padding: 1.5em 0
     border-bottom: solid 1px $border-color
     position: relative
+    +breakpoint(iphone)
+        width: 100%
     &.floating
         margin: 0 20px
         +box-shadow(rgba(black,.6) 0 4px 6px -7px)
@@ -208,9 +228,14 @@ body
     +border-radius(5px)
     position: absolute
     top: 1.25em
+    +user-select(none)
     &:hover
         border-color: $highlight-color
         cursor: pointer
+    &.disabled
+        border-color: transparent !important
+        pointer-events: none
+        +opacity(.3)
     &.easier
         left: 0
     &.harder
@@ -258,6 +283,9 @@ body
         margin-bottom: 1.3em
         padding-top: 50%
         +border-radius(10px)
+    img
+        max-width: 100%
+        height: auto
 
 
 // Helpers
