--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,24 @@
 
     <header class="main-header">
         <h1>Plain news</h1>
-
         <h2>it's easy to understand. <span class="highlight-color pointer j-show-about">Why?</span></h2>
     </header>
 
     <section class="language-lvl-selector j-languageLVL">
+    </section>
+    <section class="mobile-navigation-holder">
+        <span class="mobile-navigation-selected">Top Stories</span>
+        <select name="" id="" class="mobile-navigation">
+            <option>Top Stories</option>
+            <option>Politics</option>
+            <option>Social</option>
+            <option>Economics</option>
+            <option>Sports</option>
+            <option>Science</option>
+            <option>Tech</option>
+            <option>Culture</option>
+            <option>World</option>
+        </select>
     </section>
 
     <section class="articles"><!-- Toggle class «loading» for loading spinner -->
