Deleted div that wrapped episodes

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,8 +1,6 @@
-<article class="article">
-    <h1><a href="{{ link }}" target="_blank">{{ title }}</a></h1>
+<h1><a href="{{ link }}" target="_blank">{{ title }}</a></h1>
 
 
-    <a href="#" class="post-time">{{ name }} – 5 minutes ago</a>
+<a href="#" class="post-time">{{ name }} – {{ publicationDate }}</a>
 
-    <p>{{{ description }}}</p>
-</article>
+<p>{{{ description }}}</p>
