[–] Mobile navigation removed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,18 +10,17 @@
     <section class="language-lvl-selector j-languageLVL">
     </section>
     <section class="mobile-navigation-holder">
-        <span class="mobile-navigation-selected">Top Stories</span>
-        <select name="" id="" class="mobile-navigation">
-            <option>Top Stories</option>
-            <option>Politics</option>
-            <option>Social</option>
-            <option>Economics</option>
-            <option>Sports</option>
-            <option>Science</option>
-            <option>Tech</option>
-            <option>Culture</option>
-            <option>World</option>
-        </select>
+        <nav class="mobile-navigation">
+            <span class="selected">Top Stories</span>
+            <span>Politics</span>
+            <span>Social</span>
+            <span>Economics</span>
+            <span>Sports</span>
+            <span>Science</span>
+            <span>Tech</span>
+            <span>Culture</span>
+            <span>World</span>
+        </nav>
     </section>
 
     <section class="articles"><!-- Toggle class «loading» for loading spinner -->
