[+] Mobile scrolling navigation markup

--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -199,6 +199,7 @@ body
     +breakpoint(pc)
         display: none
 .mobile-navigation
+    text-align: center
     white-space: nowrap
     width: 100%
     padding: 1em 0 1em 1em
@@ -207,8 +208,9 @@ body
     position: relative
     &::-webkit-scrollbar
         display: none
-    span
+    a
         font-size: 1.6em
+        color: $sub-font-color
         vertical-align: middle
         display: inline-block
         margin-right: 1em
