--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,15 +11,15 @@
     </section>
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
-            <span class="selected">Top Stories</span>
-            <span>Politics</span>
-            <span>Social</span>
-            <span>Economics</span>
-            <span>Sports</span>
-            <span>Science</span>
-            <span>Tech</span>
-            <span>Culture</span>
-            <span>World</span>
+            <a href="#" class="selected">Top Stories</a>
+            <a href="#">Politics</a>
+            <a href="#">Social</a>
+            <a href="#">Economics</a>
+            <a href="#">Sports</a>
+            <a href="#">Science</a>
+            <a href="#">Tech</a>
+            <a href="#">Culture</a>
+            <a href="#">World</a>
         </nav>
     </section>
 
