[+] Mobile about project markup

--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -171,6 +171,18 @@ body
         left: -15px
     .message
         font-size: 1.5em
+.mobile-about-project
+    text-align: left
+    margin-top: 1em
+    padding: 1em 1em 0 1em
+    border-top: solid 2px $highlight-color
+    position: relative
+    +breakpoint(iphone)
+        display: block
+    +breakpoint(pc)
+        display: none
+    .message
+        font-size: 1.3em
 
 
 // Navigation
