--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,7 @@
     <header class="main-header">
         <h1>Plain news</h1>
         <h2>it's easy to understand. <span class="highlight-color pointer j-show-about">Why?</span></h2>
+        <div class="mobile-about-project hide"><span class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, commodi, officiis, tempora doloremque illo obcaecati fuga id aliquam aspernatur eaque numquam qui eius. Placeat, laborum, ea quidem nostrum at tempore.</span></div>
     </header>
 
     <section class="language-lvl-selector j-languageLVL">
