Added images to news

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,6 +1,7 @@
 <h1><a href="{{ link }}" target="_blank">{{ title }}</a></h1>
-
-
+{{#if image}}
+    <a href="#" class="illustration" style="background-image: url('{{ image }}')"></a>
+{{/if}}
 <a href="#" class="post-time">{{ name }} – {{ publicationDate }}</a>
 
 <p>{{{ description }}}</p>
